--- a/car-rent-website/package.json
+++ b/car-rent-website/package.json
@@ -2,21 +2,31 @@
   "name": "car-rent-website",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "import-data": "node scripts/importTemplate7Data.mjs"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.1",
+    "@sanity/client": "^6.27.2",
+    "@sanity/image-url": "^1.1.0",
+    "@sanity/vision": "^3.72.1",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
     "lucide-react": "^0.469.0",
     "next": "14.2.15",
+    "next-sanity": "^9.8.46",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.4.0",
+    "sanity": "^3.72.1",
+    "styled-components": "^6.1.14",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
